# pump.fun_sniper_bot

./: .env.example  .gitignore  .replit  Cargo.toml  README.md  package-lock.json  package.json  run.sh  sniper-wallet.json
attached_assets/: Pasted--Security-Filtering-Implementation-1-Checklist-of-Suspicious-Instructions-Be-1747285393615.txt  Pasted-Building-an-Automated-Solana-Pump-fun-Sniper-Bot-in-Rust-Author-An-expert-Rust-developer-and-Solan-1747274790188.txt  Pasted-Here-s-how-to-adapt-each-of-the-five-strategies-into-a-JavaScript-native-plan-using-solana-we-1747276970227.txt
solana-bot-test/: Cargo.toml
solana-bot-test/src/: main.rs
src/: cli.rs  config.rs  filter.rs  index.js  main.rs  monitor.rs  trader.rs  utils.rs  wallet.rs
src/config/: index.js
src/filter/: index.js
src/monitor/: index.js
src/security/: index.js
src/trader/: index.js
src/utils/: logger.js  rpc.js
src/wallet/: index.js
